feat: createComment implementado
