# lib/model/Comment.js
@@ -1,21 +1,29 @@
 let mongoose = require("mongoose");
-let Schema = mongoose.Schema;
 
 var profileSchema = require("./Profile");
 var subComment = require("./SubComment");
 
-var commentSchema = new Schema({
-    commentProfile: { type: profileSchema, required: true },
+var CommentSchema = mongoose.model("Comment", {
+    profileObjectId: { type: mongoose.Types.ObjectId, required: true },
     comment: { type: String, required: true },
-    numberOfLikes: { type: Number },
-    numberOfComments: { type: Number },
-    comments: [{ comment: { type: subComment } }],
+    numberOfLikes: { type: Number, default: 0 },
+    numberOfComments: { type: Number, default: 0 },
+    comments: [
+        {
+            //ATENCAO AQUI (commentProfileObjectId) ESTOU PENSANDO EM PASSAR UM OBJ COM NOME,
+            //URL DE FOTO, E _ID DE QUEM COMENTOU, POIS AI NÃO PRECISA FAZER UMA NOVA CONSULTA A
+            //CADA COMENTARIO, SO BUSCA A IMAGEM, O NOME QUE JA TA SALVO NO COMENTARIO;
+            //LEVANDO EM CONTA QUE VOU TER OS DADOS DO USUARIO QUE COMENTAR, ENTÃO SO ENVIAR JUNTO
+            //AO COMENTARIO QUE FOI FEITO;
+            commentProfileObjectId: {
+                type: mongoose.Types.ObjectId,
+                required: true,
+            },
+            comment: { type: String, required: true },
+            numberOfLikes: { type: Number },
+            numberOfComments: { type: Number },
+        },
+    ],
 });
 
-var modelName = "comment";
-
-if (mongoose.connection && mongoose.connection.models[modelName]) {
-    module.exports = mongoose.connection.models[modelName]; //Conexão
-} else {
-    module.exports = mongoose.model(modelName, commentSchema); //Criar nova conexão
-}
+module.exports = CommentSchema;
